--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -7,7 +7,7 @@
   <body>
 
     <!-- Asegúrate de que el nombre del formulario coincida con el valor en el atributo form-name -->
-    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" hidden>
+    <form name="MyJourneysSubscriptionForm" method="POST" data-netlify="true" netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
     </form>
